# newsletter

./: Cargo.toml  README.md
.cargo/: config.toml
.github/: general.yml
scripts/: init_db.sh
src/: config.rs  lib.rs  main.rs  startup.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
