[package]
name = "newsletter"
version = "0.1.0"
edition = "2021"

[[bin]]
path = "src/main.rs"
name = "newsletter"

[lib]
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
