[package]
name = "newsletter"
version = "0.1.0"
edition = "2021"

[[bin]]
path = "src/main.rs"
name = "newsletter"

[lib]
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.12.1"
reqwest = "0.13.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"]}

[dependencies.sqlx]
version = "0.7"
default-features = false
features = [
	"runtime-tokio-rustls",
	"macros",
	"postgres",
	"uuid",
	"chrono",
	"migrate"
]
